# rustdesk-plus

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  docker-compose.plus.yml  install.sh
agent/: go.mod  main.go
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/(protected)/: layout.tsx
dashboard/src/app/(protected)/branches/: page.tsx
dashboard/src/app/(protected)/dashboard/: page.tsx
dashboard/src/app/(protected)/devices/: page.tsx
dashboard/src/app/(protected)/scripts/: page.tsx
dashboard/src/app/(protected)/settings/: page.tsx
dashboard/src/app/(protected)/tags/: page.tsx
dashboard/src/app/(protected)/tenants/: page.tsx
dashboard/src/app/(protected)/terminal/: page.tsx
dashboard/src/app/(protected)/users/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/lib/: api.ts  auth.ts
deploy/: Caddyfile  nginx.conf
deploy/rustdesk-server/: Dockerfile  hbbs-entrypoint.sh
installer/: go.mod  main.go
plus-api/: .env.example  Cargo.toml  Dockerfile
plus-api/migrations/: 0001_init.sql  0002_add_device_fields.sql  0003_device_enhancements.sql  0004_tags_and_exec.sql  0005_multi_tenancy.sql  0007_scripts.sql
plus-api/src/: auth.rs  config.rs  db.rs  error.rs  installer.rs  main.rs  models.rs  state.rs
plus-api/src/routes/: admin.rs  agent.rs  client.rs  mod.rs  scripts.rs  setup.rs
